[tool.poetry]
name = "QA_site"
version = "0.1.0"
description = "a website that you send a text to server and asks some question on that text"
authors = ["a.espahbodi <dev.amir.espahbodi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.3"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
langchain-openai = "^0.1.8"
pypdf = "^4.2.0"
python-magic = "^0.4.27"
nltk = "^3.8.1"
chromadb = "^0.5.0"
black = {extras = ["d"], version = "^24.4.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
